sRGB vs. ICC
This issue was foreseen in #12 (closed) and emerged in !40 (merged).
sRGB spec says you encode with the piecewise transfer function, and the reference display uses gamma 2.2 (pure power-law). So sRGB is actually similar to BT.709 et al. which defines an encoding and then refers to BT.1886 for decoding, which causes a discrepancy: decoding is not the inverse of encoding. For the BT.709/BT.1886 the discrepancy is totally intentional. For sRGB it is unclear what the intention was, but it also does not matter, because the discrepancy is the expected behavior on calibrated (not color managed) systems.
At least in LittleCMS 2, the sRGB profile uses the piecewise transfer function.
What !40 (merged) means for ICC workflow is painful. An ICC profile that describes the sRGB color space uses the piecewise TF. An ICC profile that is used to characterize sRGB content or an sRGB display would need to use gamma 2.2 instead.
This is not in any way a new problem though. Even completely within the ICC workflow, if you profile a well-calibrated sRGB display, you would get an ICC profile gamma 2.2. If you then slap a stock sRGB profile (uses piecewise function) on sRGB content and run that through a CMM with a colorimetric rendering intent, it would first undo the piecewise function, encode with gamma 2.2, and then display decodes gamma 2.2. This puts the "original" colorimetry on screen instead of the intended display colorimetry as defined by sRGB spec. Actually, the display does not need to be calibrated to anything at all, the result will be always the same (within hardware capability, of course).
What should an ICC profile for sRGB content hold?
What should an ICC profile for sRGB display hold?
Do those depend on the use case somehow?
Can or should they be made equivalent to sRGB parametric (non-ICC) characterizations?
Interoperability between parametric and ICC-based image descriptions is needed for Wayland color management. At first hand it seems like the results should be the same regardless of whether you picked a parametric or an ICC-based sRGB image description for content or display, assuming a well-designed interface between the two workflows.