Disable support of transfer_function_srgb in Wayland

For some obscure reason Wayland compositors implemented transfer_function_srgb
as gamma-2.2 transfer function, which caused a lot of confustion and broke Krita's
color management pipeline. The enum is going to be deprecated in the
upcoming version of the protocol, so it is easier just to explicitly disable that.

https://gitlab.freedesktop.org/pq/color-and-hdr/-/issues/30